fixed height on mobile view

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -48,7 +48,7 @@
 
 @media(max-width: 700px){
     .App{
-        height: 105vh;
+        height: 108vh;
         background-position: 50% 30%;
         .main-container{
             .action-group{
